kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey_details_deployment
  labels:
    app: survey_details
spec:
  replicas: 3
  selector:
    matchLabels:
      app: survey_details
  template:
    metadata:
      labels:
        app: survey_details
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
