kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveyform-backend-service
  namespace: surveyform-backend
spec:
  selector:
    app: surveyform-backend
  ports:
    - port: 8080
