kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surveyform-backend-ingress
  namespace: surveyform-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2/
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: surveyform-backend-service
                port:
                  number: 8080
